closDevOrg copy/force-app/main/default/objects/LOS_TAT_Pause_Rule__mdt/fields/LOS_Application_Type__c.field-meta.xml
<CustomField>
    <fullName>LOS_Application_Type__c</fullName>
    <description>Application Type. See docs/data-dictionary.md for usage.</description>
    <label>Application Type</label>
    <referenceTo>LOS_Application_Type__mdt</referenceTo>
    <relationshipLabel>LOS TAT Pause Rule Application Type</relationshipLabel>
    <relationshipName>LOS_TAT_Pause_Rule_Application_Type</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>