closDevOrg copy/force-app/main/default/objects/LOS_TAT_Pause_Rule__mdt/fields/LOS_Requires_Comments__c.field-meta.xml
<CustomField>
    <fullName>LOS_Requires_Comments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Requires Comments. See docs/data-dictionary.md for usage.</description>
    <label>Requires Comments</label>
    <type>Checkbox</type>
</CustomField>